bootstrap.css
/* ... */
dd {
  font-size: 1em;
  line-height: 1.5em;
  margin-left: 1.5em;
  }

/* tables */
table {
  width: 100%;
  margin-bottom: 1.5em;
  border-collapse: collapse;
  }

th, td, caption {
  font-size: 1em;
  line-height: 1.5em;
  padding: 0.75em 0.75em 0.8em 0.75em;
  }

table caption {
  background: #36f;
  color: #fff;
  }

th {
  font-weight: bold;
  }

thead th {
  background: #ccf;
  }

tbody tr:nth-child(even) td, tbody tr.even td {
  background: #eef;
  }

tbody tr:hover td {
  background: #ddf;
  }

th.num, td.num {
  text-align: right;
  }

tfoot {
  font-style: italic;
  }

caption {
  background: #eee;
  }

/* comment the following rule if you don't want that to show */
form:not(.no-required):after {
  font-size: 0.8em;
  line-height: 1.875em;
  display: block;
  content: 'Required items are marked with red *';
  color: #c00;
  }

fieldset {
  padding: 1.5em 1.5em 1.45em 1.5em;
  margin: 0 0 1.5em 0;
  border: 0.1em solid #ccc;
  }

legend {
  font-weight: bold;
  font-size: 1.2em;
  line-height: 1.25em;
  padding: 0 0.5em;
  }

label {
  display: block;
  font-weight: bold;
  line-height: 1.5em;
  }

form:not(.singlecol) label {
  float: left;
  font-weight: normal;
  width: 40%;
  }

label.required:after {
  font-weight: normal;
  content: ' *';
  color: #c00;
  }

form:not(.singlecol) .input {
  float: right;
  width: 60%;
  }

input:not([type=submit]):not([type=button]):not([type=reset]) {
  padding: 0.25em;
  height: 1.5em;
  margin-bottom: 1.1em;
  border: 0.1em solid #999;
  }

input:not([type=submit]):not([type=button]):not([type=reset]):not([type=checkbox]):not([type=radio]) {  
  width: 180px;
  }

input[type=file] {
  border: 0 !important;
  width: 95% !important;
  margin-bottom: 1.2em;
  }

input[type=checkbox], input[type=radio] {
  cursor: pointer;
  margin-right: 0.75em;
  }

.input label {
  width: 100% !important;
  font-weight: normal;
  display: block !important;
  float: none !important;
  line-height: 1.4em;
  cursor: pointer;
  }

.input label:last-of-type {
  margin-bottom: 1.5em;
  }

.input label input {
  position: relative;
  top: .33em;
  }

textarea {
  padding: 0.25em;
  width: 240px;
  height: 6em;
  margin-bottom: 1.1em;
  font-family: "Helvetica Neue",Arial,Helvetica,sans-serif;
  border: 0.1em solid #999;
  }

select {
  width: 188px;
  height: 2em;
  padding: 0.25em;
  margin-bottom: 1.2em;
  border: 0.1em solid #999;
  }

input:focus, textarea:focus {
  outline: 0;
  border-color: #666;
  }

input[required]:focus, textarea[required]:focus {
  border-color: #f00;
  }

input[readonly], textarea[readonly] {
  background: #ddd;
  color: #444;
  border-color: #999;
  cursor: text;
  }

input[disabled], textarea[disabled] {
  background: #eee;
  color: #999;
  border-color: #999;
  }

input[required], textarea[required], select[required] {
  border-color: #c00;
  }

.hint {
  color: #999;
  margin-top: -1em;
  margin-bottom: 1em;
  }

.btn {
  display: inline-block;
  text-align: center;
  cursor: pointer;
  font-size: 1em;
  margin: 0 0 0.75em 0;
  padding: 0.5em 0.75em;
  color: #000;
  background: #ddd;
  border: 0.1em solid #999;
  -moz-border-radius: 5px;
  -webkit-border-radius: 5px;
  border-radius: 5px;
  }

.btn:hover {
  color: #000;
  background: #ccc;
  border-color: #666;
  }

a.btn {
  text-decoration: none;
  }

.btn.primary {
  color: #fff;
  background: #39f;
  border-color: #06c;
  font-weight: bold;
  }

.btn.primary:hover {
  background: #06f;
  border-color: #03f;
  }

.btn.danger, input[type=reset].btn {
  color: #fff;
  background: #f30;
  border-color: #c30;
  }

.btn.danger:hover, input[type=reset].btn:hover {
  background: #c30;
  border-color: #c00;
  }

/* make images and embedded media fluid */
img, object, embed, video, audio {
  max-width: 100%;
  }

/*
 * Default 1080px grid, fixed for 1080+, fluid for smaller screens
 */

.wrapper {
  max-width: 1080px;
  margin: 0 auto;
  padding: 1.5em 10px;
  }

/* Uses negative margin, so that you don't have to indicate last column of the row, inspired by Harry Roberts's technique <http://csswizardry.com/2011/08/building-better-grid-systems> */
.grid {
  width: 101.1111111111111111111111111111111%;
  margin: 0 0 0 -2.2222222222222222222222222222222%;
  list-style: none;
  }

.col1, .col2, .col3, .col4, .col5, .col6, .col7, .col8, .col9, .col10, .col11, .col12 {
  float: left;
  margin: 0 0 1.5em 2.2222222222222222222222222222222%;
  min-height: 1px;
  }

.grid .col1 { width: 6.1111111111111111111111111111111%; }
.grid .col2 { width: 14.444444444444444444444444444444%; }
.grid .col3 { width: 22.777777777777777777777777777778%; }
.grid .col4 { width: 31.111111111111111111111111111111%; }
.grid .col5 { width: 39.444444444444444444444444444444%; }
.grid .col6 { width: 47.777777777777777777777777777778%; }
.grid .col7 { width: 56.111111111111111111111111111111%; }
.grid .col8 { width: 64.444444444444444444444444444444%; }
.grid .col9 { width: 72.777777777777777777777777777778%; }
.grid .col10 { width: 81.111111111111111111111111111111%; }
.grid .col11 { width: 89.444444444444444444444444444444%; }
.grid .col12 { width: 97.777777777777777777777777777778%; }

/* use these to indent a column by prepending empty columns to it */
.offset1 { margin-left: 10.555555555555555555555555555556%; }
.offset2 { margin-left: 18.888888888888888888888888888889%; }
.offset3 { margin-left: 27.222222222222222222222222222222%; }
.offset4 { margin-left: 35.555555555555555555555555555556%; }
.offset5 { margin-left: 43.888888888888888888888888888889%; }
.offset6 { margin-left: 52.222222222222222222222222222222%; }
.offset7 { margin-left: 60.555555555555555555555555555556%; }
.offset8 { margin-left: 68.888888888888888888888888888889%; }
.offset9 { margin-left: 77.222222222222222222222222222222%; }
.offset10 { margin-left: 85.555555555555555555555555555556%; }
.offset11 { margin-left: 93.888888888888888888888888888889%; }
/* ... */

